# exercices-classe

./: .gitignore  ExercicesClasse.sln  README.md
C02_Exo_NuanceurFragments/: C02_Exo_NuanceurFragments.vcxproj  C02_Exo_NuanceurFragments.vcxproj.filters  CMakeLists.txt  README.md  main.cpp  vert.glsl
C02_Exo_NuanceurSommets/: C02_Exo_NuanceurSommets.vcxproj  CMakeLists.txt  README.md  frag.glsl  main.cpp  vert.glsl
C02_Quiz_NuanceurFragments/: C02_Quiz_NuanceurFragments.vcxproj  CMakeLists.txt  README.md  frag.glsl  main.cpp
C02_Quiz_NuanceurSommets/: C02_Quiz_NuanceurSommets.vcxproj  CMakeLists.txt  README.md  main.cpp
C03_Exo1_OrdreTransfos/: C03_Exo1_OrdreTransfos.vcxproj  C03_Exo1_OrdreTransfos.vcxproj.filters  CMakeLists.txt  README.md  basic_frag.glsl  basic_vert.glsl  main.cpp
C03_Intro_Transformations/: C03_Intro_Transformations.vcxproj  CMakeLists.txt  README.md  main.cpp  vert.glsl
C04_Intro_Image/: C04_Intro_Image.vcxproj  C04_Intro_Image.vcxproj.filters  CMakeLists.txt  README.md  basic_vert.glsl  frag.glsl  main.cpp
C06_Intro_Illumination/: C06_Intro_Illumination.vcxproj  C06_Intro_Illumination.vcxproj.filters  CMakeLists.txt  README.md  basic_frag.glsl  lit_frag.glsl  main.cpp  vert.glsl
C08_Intro_GeoTess/: C08_Intro_GeoTess.vcxproj  CMakeLists.txt  README.md  basic_vert.glsl  main.cpp
inf2705/: Mesh.hpp  OpenGLApplication.hpp  OrbitCamera.hpp  ShaderProgram.hpp  Texture.hpp  TransformStack.hpp  sfml_utils.hpp  utils.hpp
